Fix RWD on smaller window sizes on desktop

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -69,6 +69,7 @@
   z-index: 10;
   height: 1200px;
   width: 500px;
+  min-width: 500px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -84,8 +85,8 @@
   text-wrap: nowrap;
   letter-spacing: -5px;
   top: 1095px;
-  left: -100px;
-  position: relative;
+  left: 0;
+  position: absolute;
   z-index: 1;
 }
 
@@ -112,6 +113,7 @@
 .hero .photo {
   animation: warpPhoto 20s infinite ease-in-out;
   margin-top: 50px;
+  margin-right: 20px;
   max-width: 40vw;
   width: 100%;
   height: 100%;
@@ -162,6 +164,7 @@
 
   .hero .photo {
     max-width: 90vw;
+    margin-right: 0;
   }
 }
 
@@ -170,6 +173,7 @@
   .hero .header-box {
     height: 800px;
     width: 300px;
+    min-width: 0;
   }
 
   .hero .header-box .about {
@@ -178,7 +182,6 @@
   }
 
   .hero .name {
-    margin-top: -100px;
     font-size: 2rem;
   }
 
